More fixes for xfce and mate scripts

--- a/chroot/bclfs/DEs/XFCE/bclfs_DE2_XFCE1_x64_RASUN.sh.save.1
+++ b/chroot/bclfs/DEs/XFCE/bclfs_DE2_XFCE1_x64_RASUN.sh.save.1
@@ -3689,6 +3689,10 @@ EOF
 
 ## Xfce4 Applications ##
 
+#gtksourceview3
+
+#mousepad
+
 #vte needs pcre2
 #PCRE2
 wget ftp://ftp.csx.cam.ac.uk/pub/software/programming/pcre/pcre2-10.23.tar.bz2 -O \
